[gd_scene load_steps=7 format=2]

[ext_resource path="res://2d-sonido/dj.gd" type="Script" id=1]
[ext_resource path="res://2d-dados/caballo.png" type="Texture" id=2]
[ext_resource path="res://2d-sonido/audio.mp3" type="AudioStream" id=3]
[ext_resource path="res://2d-dados/fondo.jpg" type="Texture" id=4]
[ext_resource path="res://2d-sonido/plato.png" type="Texture" id=5]
[ext_resource path="res://2d-sonido/alta1080.png" type="Texture" id=6]

[node name="dj" type="Node2D"]
script = ExtResource( 1 )

[node name="Fondo" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="Plato" type="Sprite" parent="Fondo"]
position = Vector2( 184, 519 )
texture = ExtResource( 5 )

[node name="alta" type="Sprite" parent="Fondo"]
position = Vector2( 4, 11 )
texture = ExtResource( 6 )
centered = false

[node name="Timer" type="Timer" parent="Fondo/alta"]

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
margin_right = 60.0
margin_bottom = 60.0

[node name="Sprite" type="Sprite" parent="TextureButton"]
position = Vector2( 25.5, 30.5 )
scale = Vector2( 0.601563, 0.523438 )
texture = ExtResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="TimerScra" type="Timer" parent="AudioStreamPlayer2D"]

[connection signal="timeout" from="Fondo/alta/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="AudioStreamPlayer2D/TimerScra" to="." method="_on_TimerScra_timeout"]
